# blocktest-custom-plugins

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: actionCustom.cpp  actionCustom.h  actionredball.cpp  actionredball.h  customActionDepotStart.cpp  customActionDepotStart.h
xmltemplate/custom/: actionredball.xml  parameters.xml
